--- a/example/index.html
+++ b/example/index.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
   <title></title>
   <script src="bundle.js"></script>
-  <link rel="stylesheet" type="text/css" href="../tooltip.css">
+  <link rel="stylesheet" type="text/css" href="../wcl-tooltip.css">
 </head>
 <body>
   <ul>
-    <li class="tooltipped" data-tooltip-text="ツールチップ1">サンプル5のメニュー1</li>
-    <li class="tooltipped" data-tooltip-text="ツールチップ2">サンプル5のメニュー2</li>
-    <li class="tooltipped" data-tooltip-text="ツールチップ3">サンプル5のメニュー3</li>
-    <li class="tooltipped" data-tooltip-text="ツールチップ4">サンプル5のメニュー4</li>
+    <li class="tooltipped" data-wcl-tooltip-text="ツールチップ1">サンプル5のメニュー1</li>
+    <li class="tooltipped" data-wcl-tooltip-text="ツールチップ2">サンプル5のメニュー2</li>
+    <li class="tooltipped" data-wcl-tooltip-text="ツールチップ3">サンプル5のメニュー3</li>
+    <li class="tooltipped" data-wcl-tooltip-text="ツールチップ4">サンプル5のメニュー4</li>
   </ul>
-<div class="tooltipped" style="width: 100px; height: 100px; background-color: darkred;" data-tooltip-text="ツールチップ<br>です">
+<div class="tooltipped" style="width: 100px; height: 100px; background-color: darkred;" data-wcl-tooltip-text="ツールチップ<br>です">
 div
 </div>
 </body>
