--- a/example/index.html
+++ b/example/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
   <meta charset="UTF-8">
   <title></title>
@@ -8,12 +8,12 @@
 </head>
 <body>
   <ul>
-    <li class="tooltipped" data-wcl-tooltip-text="ツールチップ1">サンプル5のメニュー1</li>
-    <li class="tooltipped" data-wcl-tooltip-text="ツールチップ2">サンプル5のメニュー2</li>
-    <li class="tooltipped" data-wcl-tooltip-text="ツールチップ3">サンプル5のメニュー3</li>
-    <li class="tooltipped" data-wcl-tooltip-text="ツールチップ4">サンプル5のメニュー4</li>
+    <li class="tooltipped" data-wcltip-text="ツールチップ1">サンプル5のメニュー1</li>
+    <li class="tooltipped" data-wcltip-text="ツールチップ2">サンプル5のメニュー2</li>
+    <li class="tooltipped" data-wcltip-text="ツールチップ3">サンプル5のメニュー3</li>
+    <li class="tooltipped" data-wcltip-text="ツールチップ4">サンプル5のメニュー4</li>
   </ul>
-<div class="tooltipped" style="width: 100px; height: 100px; background-color: darkred;" data-wcl-tooltip-text="ツールチップ<br>です">
+<div class="tooltipped" style="width: 100px; height: 100px; background-color: darkred;" data-wcltip-text="ツールチップ<br>です">
 div
 </div>
 </body>
