data-wcltip-text-src attribute

--- a/example/index.html
+++ b/example/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
   <ul>
-    <li class="tooltipped" data-wcltip-text="ツールチップ1">サンプル5のメニュー1</li>
-    <li class="tooltipped" data-wcltip-text="ツールチップ2">サンプル5のメニュー2</li>
-    <li class="tooltipped" data-wcltip-text="ツールチップ3">サンプル5のメニュー3</li>
-    <li class="tooltipped" data-wcltip-text="ツールチップ4">サンプル5のメニュー4</li>
+    <li class="tooltipped" data-wcltip-text="ツールチップ1">メニュー1</li>
+    <li class="tooltipped" data-wcltip-text-src="menu2-tooltip">メニュー2</li>
+    <li class="tooltipped" data-wcltip-text="ツールチップ3">メニュー3</li>
+    <li class="tooltipped" data-wcltip-text="ツールチップ4">メニュー4</li>
   </ul>
+  <span id="menu2-tooltip" style="display: none;">ツールチップ2 from src</span>
 <div class="tooltipped" style="width: 100px; height: 100px; background-color: darkred;" data-wcltip-text="ツールチップ<br>です">
 div
 </div>
