title bar with close button

--- a/example/index.html
+++ b/example/index.html
@@ -11,7 +11,7 @@
 <ul>
   <li class="tooltipped" data-wcltip-text="ツールチップ1">data-wcltip-text</li>
   <li class="tooltipped" data-wcltip-text-src="menu2-tooltip">data-wcltip-text-src</li>
-  <li class="tooltipped" data-wcltip-html-src="menu3-tooltip">data-wcltip-html-src</li>
+  <li class="tooltipped" data-wcltip-html-src="menu3-tooltip" data-wcltip-title="Tooltip Title">data-wcltip-html-src</li>
 </ul>
 <span id="menu2-tooltip" style="display: none;">ツールチップ2 from src</span>
 <div id="menu3-tooltip" style="display: none;">
