tooltip left position bug fixed

--- a/example/index.html
+++ b/example/index.html
@@ -7,12 +7,9 @@
   <link rel="stylesheet" type="text/css" href="../wcl-tooltip.css">
 </head>
 <body>
-<div class="tooltipped" style="width: 100px; height: 100px; background-color: darkred;" data-wcltip-text="ツールチップ<br>です"></div>
-<ul>
-  <li class="tooltipped" data-wcltip-text="ツールチップ1">data-wcltip-text</li>
-  <li class="tooltipped" data-wcltip-text-src="menu2-tooltip">data-wcltip-text-src</li>
-  <li class="tooltipped" data-wcltip-html-src="menu3-tooltip" data-wcltip-title="Tooltip Title">data-wcltip-html-src</li>
-</ul>
+<span class="tooltipped" data-wcltip-text="ツールチップ1">data-wcltip-text</span>
+<span class="tooltipped" data-wcltip-text-src="menu2-tooltip">data-wcltip-text-src</span>
+<span class="tooltipped" data-wcltip-html-src="menu3-tooltip" data-wcltip-title="Tooltip Title">data-wcltip-html-src</span>
 <span id="menu2-tooltip" style="display: none;">ツールチップ2 from src</span>
 <div id="menu3-tooltip" style="display: none;">
   <a href="http://kumamon-official.jp">Kuma-mon official homepage</a><br>
